--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,17 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+   <!-- <form method="POST"  action="/team"> -->
+     <h1>Team Name:<%= @name %> </h1>
+     <p>Coach:<%= @coach %></p>
+     <p>Point Guard:<%= @point_guard %></p>
+     <p>Shooting Guard:<%= @shooting_guard %></p>
+     <p>Small Forward:<%= @small_forward %></p>
+     <p>Power Forward:<%= @power_forward %></p>
+     <p>Center:<%= @center %></p>
+   <!-- </form> -->
+
 
 
  </body>
 </html>
-
-
